--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.6",
         "@types/cors": "^2.8.13",
+        "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.15",
         "@types/jsonwebtoken": "^9.0.1",
         "@types/knex": "^0.16.1",
@@ -22,9 +24,10 @@
         "typescript": "^4.9.4"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "cors": "^2.8.5",
-        "dotenv": "^16.0.3",
-        "express": "^4.18.2",
+        "dotenv": "^16.4.5",
+        "express": "^4.21.0",
         "jsonwebtoken": "^9.0.0",
         "knex": "^2.4.2",
         "sqlite3": "^5.1.4",
